--- a/css/styles.css
+++ b/css/styles.css
@@ -113,13 +113,12 @@ nav a:active {
 
 }
 
-.wide {
-  width: 100%;
-}
+
 
 /* Portfolio gallery */
 .gallery-portfolio img {
   max-width: 100% !important;
+  min-width: 100%;
   display: block;
   border: none;
   padding: 0;
@@ -139,7 +138,7 @@ nav a:active {
   margin: 2em auto 0;
   overflow: auto;
   list-style: none;
-  padding: 0 !important;
+  padding: 0%;
 }
 .gallery-portfolio li,
 .gallery-portfolio li a {
@@ -356,6 +355,10 @@ p {
     width: 25%;
     text-align: right;
   }
+
+.thumbnail {
+  width: 50%;
+}
 
 
 
